<resources>
    <string name="app_name">capsule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_toolbar">Blood</string>
    <string name="timer">Remaining Time:1:00</string>
    <string name="Note">Note</string>
    <string name="question_num">Question 1/10</string>
    <string name="result">Result</string>
    <string name="questions">questions</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="verify_answer">Verify Answer</string>
    <string name="result_tv">result</string>
    <string name="up_next">Up Next</string>
    <string name="ncert_lines">NCERT Lines</string>
    <string name="read_from_ncert_lines">Read From NCERT Lines</string>
</resources>